fix bugs - navbar style spill into camps

--- a/style/inline.css
+++ b/style/inline.css
@@ -14,7 +14,7 @@ body {
 }
 
 .navbar a {
-  float: right;
+  float: left;
   padding: 12px;
   color: white;
   text-decoration: none;
@@ -44,6 +44,8 @@ body {
     float: none;
     display: block;
   }
+}
+
 .header {
   text-align: center;
   padding: 12px;
